--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="title">Привлечение <span>клиентов</span></h1>
+<h1 class="title">Ремонт <span>ноутбуков</span></h1>
 
 <div class="main">
     <div class="main-info">
-        <p>
-            Не знаете, как привлечь клиентов? Наше агентство поможет сформировать
-            для вас постоянный поток клиентов, которым будут интересны ваши услуги!
-        </p>
-        <h2>Почему с нами выгодно работать</h2>
+        <h2>Почему лучше обратиться именно к нам?</h2>
         <ul>
-            <li>Помогли более 200 компаниям</li>
-            <li>Опыт более 5 лет</li>
-            <li>Имеем квалифицированных специалистов</li>
-            <li>Применяем самые эффективные практики</li>
+            <li>Бесплатная диагностика поломки прямо при клиенте</li>
+            <li>Молниеносная скорость починки (от 20 минут до 2 рабочих дней)</li>
+            <li>Больше 10 лет на рынке – починили более 2500 ноутбуков</li>
         </ul>
         <a href="http://google.com" target="_blank">Посмотреть кейсы</a>
     </div>
-    <img alt="Бородатый чувак" src="img/image.png">
+    <img alt="Ноутбук" src="img/image.png">
 </div>
 
 <div class="form">
-    <h3>Заявка на сотрудничество</h3>
+    <h3>Прайс наших услуг</h3>
     <input type="text" placeholder="Ваше имя">
     <input type="text" placeholder="Ваш номер телефона">
+    <input type="text" placeholder="Ваш Е-mail">
     <button>Отправить запрос</button>
 </div>
 
