--- a/index.html
+++ b/index.html
@@ -2,36 +2,47 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Моя первая страница</title>
-    <link href="styles.css" rel="stylesheet">
+    <title>Аренда премиальных автомобилей</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<h1 class="title">Привлечение <span>клиентов</span></h1>
-
-<div class="main">
-    <div class="main-info">
-        <p>
-            Не знаете, как привлечь клиентов? Наше агентство поможет сформировать
-            для вас постоянный поток клиентов, которым будут интересны ваши услуги!
-        </p>
-        <h2>Почему с нами выгодно работать</h2>
-        <ul>
-            <li>Помогли более 200 компаниям</li>
-            <li>Опыт более 5 лет</li>
-            <li>Имеем квалифицированных специалистов</li>
-            <li>Применяем самые эффективные практики</li>
-        </ul>
-        <a href="http://google.com" target="_blank">Посмотреть кейсы</a>
+<header class="header">
+    <div class="container">
+        <div class="logo">
+            <img src="images/logo.png" alt="Лого компании">
+        </div>
+        <nav class="menu">
+            <ul>
+                <li class="menu-item">
+                    <a href="#">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">Автомобили</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">Бронирование авто</a>
+                </li>
+            </ul>
+        </nav>
     </div>
-    <img alt="Бородатый чувак" src="img/image.png">
-</div>
+</header>
 
-<div class="form">
-    <h3>Заявка на сотрудничество</h3>
-    <input type="text" placeholder="Ваше имя">
-    <input type="text" placeholder="Ваш номер телефона">
-    <button>Отправить запрос</button>
-</div>
+<section class="main">
+    <div class="container">
+        <div class="main-info">
+            <h1 class="main-title">Аренда премиальных автомобилей</h1>
+            <div class="main-text">
+                В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных
+                серийных машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать
+                за рулем настоящей легенды и узнать, на что она способна за пределами гоночной трассы!
+            </div>
+            <div class="main-action">
+                <button class="button">Посмотреть автомобили</button>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 </body>
 </html>
