--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <a href="#">Главная</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Автомобили</a>
+                    <a href="#cars">Автомобили</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Бронирование авто</a>
+                    <a href="#price">Бронирование авто</a>
                 </li>
             </ul>
         </nav>
@@ -43,6 +43,192 @@
     </div>
 </section>
 
-
+<section class="car" id="cars">
+    <div class="container">
+        <h2 class="sub-title">Наш автопарк</h2>
+        <div class="car-items">
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/1.png" alt="image1">
+                </div>
+                <div class="car-item-title">Lamborghini Huracan Spyder</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/2.png" alt="image2">
+                </div>
+                <div class="car-item-title">Chevrolet Corvette</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>6.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/3.png" alt="image3">
+                </div>
+                <div class="car-item-title">Ferrari California</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.9 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>4</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/4.png" alt="image4">
+                </div>
+                <div class="car-item-title">Lamborghini Urus</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>4 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>5</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/5.png" alt="image5">
+                </div>
+                <div class="car-item-title">Audi R8</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/6.png" alt="image6">
+                </div>
+                <div class="car-item-title">Аренда Chevrolet Camaro</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/gear.png" alt="gearbox">
+                        <div>Привод</div>
+                        <div>Полный</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/belt.png" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>4</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="price" id="price">
+    <div class="container">
+        <h2 class="sub-title">Узнать цену и забронировать</h2>
+        <div class="price-text">
+            Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
+        </div>
+        <form action="" class="price-form">
+            <input type="text" class="price-input" placeholder="Ваше имя">
+            <input type="text" class="price-input" placeholder="Ваш номер телефона">
+            <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
+            <button class="button">Узнать цену</button>
+        </form>
+        <img src="images/rolls.png" alt="rolls" class="price-image">
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="logo">
+            <img src="images/logo.png" alt="Лого компании">
+        </div>
+        <div class="rights">Все права защинены
+        </div>
+    </div>
+</footer>
 </body>
 </html>
