--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <div class="car-item-title">Lamborghini Huracan Spyder</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -64,9 +64,9 @@
                         <div>5.2 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>2</div>
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -80,9 +80,9 @@
                 <div class="car-item-title">Chevrolet Corvette</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -90,9 +90,9 @@
                         <div>6.2 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>2</div>
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2017</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -106,9 +106,9 @@
                 <div class="car-item-title">Ferrari California</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -116,9 +116,9 @@
                         <div>3.9 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>4</div>
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2018</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -132,9 +132,9 @@
                 <div class="car-item-title">Lamborghini Urus</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -142,9 +142,9 @@
                         <div>4 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>5</div>
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -158,9 +158,9 @@
                 <div class="car-item-title">Audi R8</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -168,9 +168,9 @@
                         <div>5.2 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>2</div>
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2018</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -184,9 +184,9 @@
                 <div class="car-item-title">Аренда Chevrolet Camaro</div>
                 <div class="car-item-info">
                     <div class="car-item-point">
-                        <img src="images/gear.png" alt="gearbox">
-                        <div>Привод</div>
-                        <div>Полный</div>
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
                     </div>
                     <div class="car-item-point">
                         <img src="images/wheel.png" alt="wheel">
@@ -194,9 +194,87 @@
                         <div>2 л.с.</div>
                     </div>
                     <div class="car-item-point">
-                        <img src="images/belt.png" alt="belt">
-                        <div>Кол-во мест</div>
-                        <div>4</div>
+<img src="images/year.png" alt="Year">
+                                                <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/7.png" alt="image7">
+                </div>
+                <div class="car-item-title">Maserati Quattroporte</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.0 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2018</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/8.png" alt="image8">
+                </div>
+                <div class="car-item-title">АDodge Challenger (8.png)</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>6.4 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="images/9.png" alt="image9">
+                </div>
+                <div class="car-item-title">Nissan GT-R</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="images/transmission.png" alt="Transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.8 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+<img src="images/year.png" alt="Year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
                     </div>
                 </div>
                 <div class="car-item-action">
@@ -206,6 +284,8 @@
         </div>
     </div>
 </section>
+
+
 <section class="price" id="price">
     <div class="container">
         <h2 class="sub-title">Узнать цену и забронировать</h2>
