--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Аренда премиальных автомобилей</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
 <header class="header">
@@ -26,7 +27,6 @@
         </nav>
     </div>
 </header>
-
 <section class="main">
     <div class="container">
         <div class="main-info">
@@ -37,12 +37,11 @@
                 за рулем настоящей легенды и узнать, на что она способна за пределами гоночной трассы!
             </div>
             <div class="main-action">
-                <button class="button">Посмотреть автомобили</button>
+                <button class="button" id="main-action">Посмотреть автомобили</button>
             </div>
         </div>
     </div>
 </section>
-
 <section class="car" id="cars">
     <div class="container">
         <h2 class="sub-title">Наш автопарк</h2>
@@ -70,7 +69,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -96,7 +95,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -122,7 +121,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -148,7 +147,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -174,7 +173,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -200,7 +199,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
         </div>
@@ -213,10 +212,10 @@
             Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
         </div>
         <form action="" class="price-form">
-            <input type="text" class="price-input" placeholder="Ваше имя">
-            <input type="text" class="price-input" placeholder="Ваш номер телефона">
-            <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
-            <button class="button">Узнать цену</button>
+            <input type="text" class="price-input" id="name" placeholder="Ваше имя">
+            <input type="text" class="price-input" id="phone" placeholder="Ваш номер телефона">
+            <input type="text" class="price-input" id="car" placeholder="Автомобиль, который вас интересует">
+            <button class="button" type="button" id="price-action">Узнать цену</button>
         </form>
         <img src="images/rolls.png" alt="rolls" class="price-image">
     </div>
